@@ -1,8 +1,14 @@
 package com.ms.encuestas.controllers;
 
 import java.util.List;
+import java.util.Map;
+
+import javax.servlet.http.HttpServletRequest;
 
 import org.springframework.http.HttpStatus;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.oauth2.provider.OAuth2Authentication;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -10,67 +16,41 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.security.core.userdetails.User;
 
 import com.ms.encuestas.models.Centro;
 import com.ms.encuestas.models.Empresa;
+import com.ms.encuestas.models.Encuesta;
 import com.ms.encuestas.services.EncuestaServiceI;
 
 @CrossOrigin(origins = { "http://localhost:4200" })
 @RestController
 @RequestMapping("/api")
 public class EncuestaController {
+    public static final String TOKEN_PREFIX = "Bearer ";
+    public static final String HEADER_STRING = "Authorization";
+
 	@Autowired
 	private EncuestaServiceI encuestaService;
 	
-	@GetMapping("/encuesta/empresas")
+	@GetMapping("/procesos/{procesoId}/colaboradores/{posicionCodigo}/encuesta/empresas")
 	@Transactional(readOnly = true)
-	public List<Empresa> getEncuestaEmpresa() {
-		Long procesoId = new Long(2);
-		String posicionCodigo = "208829";
-		return encuestaService.getEncuestaEmpresa(procesoId, posicionCodigo);
+	public Encuesta getEncuestaEmpresa(@PathVariable Long procesoId, @PathVariable String posicionCodigo) {
+		Long encuestaTipoId = new Long(1);
+		return encuestaService.getEncuestaEmpresa(procesoId, posicionCodigo, encuestaTipoId);
 	}
 	
-	@GetMapping("/encuesta/empresas/{empresaId}/centros")
-	@Transactional(readOnly = true)
-	public List<Centro> getEncuestaEmpresa(@PathVariable Long empresaId) {
-		Long procesoId = new Long(2);
-		String posicionCodigo = "208829";
-		
-		System.out.println(String.format("empresaId: %d", empresaId));
-		System.out.println(String.format("procesoId: %d", procesoId));
-		System.out.println(String.format("posicionCodigo: %s", posicionCodigo));
-		
-		return encuestaService.getEncuestaCentro(empresaId, procesoId, posicionCodigo);
-	}
-	
-	/*@PostMapping("/encuesta/empresas")
+	@PostMapping("/procesos/{procesoId}/colaboradores/{posicionCodigo}/encuesta/empresas")
 	@ResponseStatus(HttpStatus.CREATED)
-	public Empresa create(@RequestBody Empresa empresa) {
-		System.out.println("aqui:" + empresa.getPorcentaje());
-		long procesoId = 2;
-		String posicionCodigo = "208829";
-		this.encuestaService.saveEncuestaEmpresa(empresa, procesoId, posicionCodigo);
-		return empresa;
-	}*/
-	
-	@PostMapping("/encuesta/empresas")
-	@ResponseStatus(HttpStatus.CREATED)
-	public void create(@RequestBody List<Empresa> lstEmpresas) {
-		System.out.println("cnt" + lstEmpresas.size());
-		Long procesoId = Long.valueOf(2);
-		String posicionCodigo = "208829";
-		this.encuestaService.saveLstEmpresas(lstEmpresas, procesoId, posicionCodigo);
-	}
-	
-	@PostMapping("/encuesta/empresas/{empresaId}/centros")
-	@ResponseStatus(HttpStatus.CREATED)
-	public void create(@PathVariable Long empresaId, @RequestBody List<Centro> lstCentros) {
-		System.out.println("cnt" + lstCentros.size());
-		Long procesoId = Long.valueOf(2);
-		String posicionCodigo = "208829";
-		this.encuestaService.saveLstCentros(lstCentros, procesoId, posicionCodigo);
+	public void create(Authentication authentication, @PathVariable Long procesoId, @PathVariable String posicionCodigo, @RequestBody Encuesta encuesta) {
+		//User user = (User) authentication.getPrincipal();
+		//System.out.println("VAMOSSSSS POST " + user.getUsername());
+		Long encuestaTipoId = new Long(1);
+		this.encuestaService.saveEncuestaCabecera(encuesta.getJustificacion(), encuesta.getObservaciones(), procesoId, posicionCodigo, encuestaTipoId);
+		this.encuestaService.saveEncuestaEmpresaDetalle(encuesta.getLstItems(), procesoId, posicionCodigo);
 	}
 }
